# cmake-primer

./: CMakeLists.txt  README
include/: Car.h
src/: CMakeLists.txt  Car.cpp
test/: CMakeLists.txt  CarTest.cpp
